human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_53.wast
(assert_invalid
  (module (func $type-block-value-num-vs-void-after-nested-unreachable
    (block (block (unreachable)) (i32.const 1))
  ))
  "type mismatch"
)